@@ -4,6 +4,7 @@
 
 Version 5.25.0
 
+Fixed: FreeBSD: Support I/O statistics for encrypted partitions.
 
 
 Version 5.24.0
